[project]
name = "candlecast"
version = "0.1.0"
description = "AI-powered price forecasts for crypto and stocks."
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8",
    "huggingface-hub>=0.33",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.0",
    "safetensors>=0.6",
    "streamlit>=1.57.0",
    "torch>=2.0",
    "tqdm>=4.67",
    "yfinance>=1.3.0",
]
